--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -2,22 +2,224 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-01-21T17:48:52.282100Z",
+     "start_time": "2025-01-21T17:48:51.222679Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ],
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Import the CSV Data as Pandas Dataframe",
+   "id": "fbe15338313b62c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-21T17:50:53.505302Z",
+     "start_time": "2025-01-21T17:50:53.496058Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.read_csv('data/raw.csv')",
+   "id": "d44b20d327246c2d",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Show Top 5 Records",
+   "id": "72df44b395a0ce2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-21T17:51:44.121738Z",
+     "start_time": "2025-01-21T17:51:44.110196Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.head()",
+   "id": "11f3fd787b1118f4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
+       "1  female        group C                some college      standard   \n",
+       "2  female        group B             master's degree      standard   \n",
+       "3    male        group A          associate's degree  free/reduced   \n",
+       "4    male        group C                some college      standard   \n",
+       "\n",
+       "  test_preparation_course  math_score  reading_score  writing_score  \n",
+       "0                    none          72             72             74  \n",
+       "1               completed          69             90             88  \n",
+       "2                    none          90             95             93  \n",
+       "3                    none          47             57             44  \n",
+       "4                    none          76             78             75  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Shape",
+   "id": "48e6d62ec2d1c860"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-21T17:53:40.447632Z",
+     "start_time": "2025-01-21T17:53:40.441954Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.shape",
+   "id": "91166cef1698bbea",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Data information\n",
+    "\n",
+    "1. gender: sex of students ->(male/female)\n",
+    "2.\n",
+    "\n"
+   ],
+   "id": "dfbbe21ac1145922"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mlpp",
    "language": "python",
-   "name": "python3"
+   "name": "mlpp"
   },
   "language_info": {
    "codemirror_mode": {
